# posttrain

./: .gitignore  AGENTS.md  README.md  main.py  pyproject.toml
data/smoke/: dpo.jsonl  grpo.jsonl  rlhf.jsonl  sft.jsonl
docs/: ARCHITECTURE.md  KNOWLEDGE.md
src/posttrain/: __init__.py  __main__.py  artifacts.py  cli.py  config.py  data.py  modeling.py  pipeline.py  presets.py  types.py
src/posttrain/stages/: __init__.py  base.py  common.py  dpo.py  grpo.py  rlhf.py  sft.py
tests/: test_config.py  test_data.py  test_modeling.py  test_pipeline.py  test_types.py
