[project]
name = "posttrain"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pyyaml>=6.0.3",
    "peft>=0.18.1",
    "transformers>=5.1.0",
    "torch>=2.10.0",
]

[project.scripts]
posttrain = "posttrain.cli:main"

[dependency-groups]
dev = [
    "pyrefly>=0.52.0",
    "pytest>=9.0.2",
    "ruff>=0.15.1",
]
gpu = [
    "bitsandbytes>=0.49.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 120
target-version = "py313"
extend-exclude = ["notebooks/"]

[tool.ruff.lint]
select = ["E","F","I","UP","B"]   # UP=pyupgrade, B=bugbear, S=security

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["E402"]
"**/{tests,docs,tools}/*" = ["E402"]

[tool.pyrefly]
project-includes = ["src", "tests"]
ignore-missing-imports = [
    "torch",
    "torch.nn",
    "torch.nn.functional",
    "transformers",
    "peft",
]
